--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,2 @@
+<button class="btn btn-default" ng-click="pause()">Play/Pause</button>
 <div id='playerrprEMyXDuyEU'></div>
-<script type='text/javascript'>
-    jwplayer('playerrprEMyXDuyEU').setup({
-        file: 'video/Homeland.S03E01.HDTV.XviD-AFG.avi',
-        image: '//www.longtailvideo.com/content/images/jw-player/lWMJeVvV-876.jpg',
-        width: '100%',
-        aspectratio: '16:9'
-    });
-</script>
